--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -52,6 +52,7 @@
       </svg>
     </a>
   </div>
+  </section>
 
 
 
@@ -59,14 +60,14 @@
 
 <!-- mobilemenu -->
 
-<div class="mobile-menu is-open" data-modal>
-  <div class="container mobile-menu-container">
-  <button class="mobile-menu-clouse" data-modal-close>
-      <svg height="28" width="28" class="menu-close">
+<section class="mobile-menu is-open">
+  <button class="close-btn" type="button">
+    <svg class="close-btn-icon" width="28" height="28">
       <use href="./img/icons/icons.svg#icon-close"></use>
-      </svg>
+    </svg>
   </button>
-  <a class="menu-logo" href="./index.html">yachtjet</a>
+    <div class="container menu-container">
+      <a class="menu-logo" href="./index.html">yachtjet</a>
   <nav class="menu-nav">
     <ul class="menu-list">
       <li class="menu-list-item">
@@ -112,12 +113,6 @@
       </a>
     </li>
   </ul>
-  <a class="menu-link">
-    <svg class="menu-icon" width="28" height="28">
-      <use href="./img/icons/icons.svg#icon-close" />
-    </svg>
-  </a>
 </div>
 </section>
-
 
