--- a/src/css/header.css
+++ b/src/css/header.css
@@ -117,41 +117,6 @@
 
 
 /*mobile menu*/
-.mobile-menu {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: #1b414b;
-  z-index: 1000;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu.is-open{
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
-
-.mobile-menu-clouse{
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 24px;
-  height: 24px;
-  border-radius: 100%;
-  background-color: transparent;
-  border: 1px solid #e7e9fc;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
 .menu-container {
   display: flex;
@@ -163,6 +128,59 @@
   padding: 7px 20px;
   height: 42px;
 }
+.mobile-menu {
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #062730;
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transform: translateX(100%);
+  transition: transform cubic-bezier(0.075, 0.82, 0.165, 1);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 72px 24px 40px 16px;
+}
+
+.container {
+  height: 100%;
+}
+
+@media screen and (min-width:812px) {
+  .mobile-menu {
+      display: none;
+  }
+
+
+}
+
+@media screen and (min-width:1158px) {
+  .mobile-menu {
+      display: none;
+  }
+}
+
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+  transform: translateX(0%);
+}
+
+
+.close-btn {
+  position: absolute;
+  top: 24px;
+  right: 2;
+}
+
 
 .menu-logo {
   font-weight: 500;
@@ -170,6 +188,7 @@
   letter-spacing: -0.03em;
   color: #1b414b;
 }
+
 .menu-list {
   display: none;
 }
@@ -178,8 +197,68 @@
   display: none;
 }
 
-.menu-icon {
+.close-btn-icon {
   display: flex;
   stroke: #1b414b;
   filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+@media screen and (min-width:812px) {
+  .menu-container {
+    padding: 4px 28px;
+    height: 48px;
+    width: 704px;
+  }
+
+  .menu-logo {
+    font-size: 20px;
+  }
+
+  .menu-list {
+    display: flex;
+    gap: 4px;
+  }
+
+  .menu-list-link {
+    display: flex;
+    font-weight: 400;
+    font-size: 9px;
+    line-height: 1.3;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fbfbfb;
+    border-radius: 8px;
+    width: 91px;
+    height: 40px;
+    background: rgba(27, 65, 75, 0.5);
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-list-link:hover,
+  .menu-list-link:focus {
+    background: #1b414b;
+  }
+
+  .menu-list-socials {
+    display: flex;
+    gap: 8px;
+  }
+
+  .menu-list-socials-link {
+    display: flex;
+    align-items: center;
+  }
+
+  .menu-socials-icon {
+    fill: #1b414b;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .menu-socials-icon:hover,
+  .menu-socials-icon:focus {
+    fill: #062730;
+  }
+  
 }
