--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,3 +1,10 @@
+.hero {
+  max-width: 375px;
+  min-height: 812px;
+  padding: 198px 20px 243px;
+  margin: 0 auto;
+}
+
 .title-hero {
   font-weight: 500;
   font-size: 32px;
@@ -5,7 +12,7 @@
   letter-spacing: -0.02em;
   text-align: center;
   color: #fbfbfb;
-  /* max-width: 335px; */
+  max-width: 335px;
   margin-bottom: 24px;
 }
 
@@ -28,6 +35,63 @@
   text-align: center;
   line-height: 1.28;
   letter-spacing: -0.02em;
-  font-size: 80px;
   color: #fbfbfb;
+  background-color: #1b414b;
+  width: 141px;
+  height: 46px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-link:hover,
+.hero-link:focus {
+  color: #1b414b;
+  background-color: #fbfbfb;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    min-height: 962px;
+    padding: 200px 32px 215px;
+  }
+
+  .title-hero {
+    font-size: 70px;
+    max-width: 704px;
+  }
+
+  .hero-text {
+    padding-left: 53px;
+    padding-right: 54px;
+    font-size: 16px;
+    line-height: 1.4;
+    margin-bottom: 48px;
+  }
+
+  .hero-link {
+    padding: 16px 40px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.1;
+    width: 179px;
+    height: 52px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero {
+    max-width: 1280px;
+    min-height: 800px;
+    padding: 155px 139px 180px 140px;
+  }
+
+  .title-hero {
+    font-size: 80px;
+    max-width: 1001px;
+  }
+
+  .hero-text {
+    padding-left: 202px;
+    padding-right: 202px;
+  }
 }
