--- a/src/partials/rent-a-yacht.html
+++ b/src/partials/rent-a-yacht.html
@@ -46,23 +46,35 @@
   <div class="ray-main">
     <picture class="ray-image">
       <source
-        srcset="/img/rent-mob.jpg 1x, /img/rent-mob@2x.jpg 2x"
+        srcset="
+          /img/rent-a-yacht/rent-mob.jpg    1x,
+          /img/rent-a-yacht/rent-mob@2x.jpg 2x
+        "
         media="(max-width: 767px)"
       />
       <source
-        srcset="/img/rent-tab.jpg 1x, /img/rent-tab@2x.jpg 2x"
+        srcset="
+          /img/rent-a-yacht/rent-tab.jpg    1x,
+          /img/rent-a-yacht/rent-tab@2x.jpg 2x
+        "
         media="(min-width: 768px)"
       />
       <source
-        srcset="/img/rent-desk.jpg 1x, /img/rent-desk@2x.jpg 2x"
+        srcset="
+          /img/rent-a-yacht/rent-desk.jpg    1x,
+          /img/rent-a-yacht/rent-desk@2x.jpg 2x
+        "
         media="(min-width: 1280px)"
       />
       <source
-        srcset="/img/rent-widedesk.jpg 1x, /img/rent-widedesk@2x.jpg 2x"
+        srcset="
+          /img/rent-a-yacht/rent-widedesk.jpg    1x,
+          /img/rent-a-yacht/rent-widedesk@2x.jpg 2x
+        "
         media="(min-width: 1400px)"
       />
       <img
-        src="/img/rent-mob.jpg"
+        src="/img/rent-a-yacht/rent-mob.jpg"
         alt="rent-a-yacht-picture"
         class="ray-picture"
       />
