remove test background image and accept PR

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -17,7 +17,7 @@
 }
 
 .hero-text {
-  /* font-weight: 300; */
+  font-weight: 300;
   font-size: 12px;
   line-height: 1.17;
   text-align: center;
@@ -61,8 +61,9 @@
   }
 
   .hero-text {
-    padding-left: 53px;
-    padding-right: 54px;
+    padding: 0 53.5px;
+    /* padding-left: 53px;
+    padding-right: 54px; */
     font-size: 16px;
     line-height: 1.4;
     margin-bottom: 48px;
@@ -75,7 +76,7 @@
     line-height: 1.1;
     width: 179px;
     height: 52px;
-    }
+  }
 }
 
 @media screen and (min-width: 1280px) {
@@ -93,5 +94,105 @@
   .hero-text {
     padding-left: 202px;
     padding-right: 202px;
+  }
+}
+
+/* Background image */
+
+.header-hero-container {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(17, 19, 31, 0.15),
+      rgba(17, 19, 31, 0.75),
+      rgba(17, 19, 31, 0.98)
+    ),
+    url(/img/hero/hero-bg-mobile.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-top: 20px;
+}
+
+@media screen and (min-resolution: 192dpi) {
+  .header-hero-container {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(17, 19, 31, 0.15),
+        rgba(17, 19, 31, 0.75),
+        rgba(17, 19, 31, 0.98)
+      ),
+      url(/img/hero/hero-bg-mobile@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-hero-container {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(17, 19, 31, 0.15),
+        rgba(17, 19, 31, 0.75),
+        rgba(17, 19, 31, 0.98)
+      ),
+      url(/img/hero/hero-bg-tablet.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+  .header-hero-container {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(17, 19, 31, 0.15),
+        rgba(17, 19, 31, 0.75),
+        rgba(17, 19, 31, 0.98)
+      ),
+      url(/img/hero/hero-bg-tablet@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header-hero-container {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(17, 19, 31, 0.15),
+        rgba(17, 19, 31, 0.75),
+        rgba(17, 19, 31, 0.98)
+      ),
+      url(/img/hero/hero-bg-desk-small.jpg);
+  }
+}
+
+@media screen and (min-width: 1280px) and (min-resolution: 192dpi) {
+  .header-hero-container {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(17, 19, 31, 0.15),
+        rgba(17, 19, 31, 0.75),
+        rgba(17, 19, 31, 0.98)
+      ),
+      url(/img/hero/hero-bg-desk-small@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .header-hero-container {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(17, 19, 31, 0.15),
+        rgba(17, 19, 31, 0.75),
+        rgba(17, 19, 31, 0.98)
+      ),
+      url(/img/hero/hero-bg-desk-big.jpg);
+  }
+}
+
+@media screen and (min-width: 1440px) and (min-resolution: 192dpi) {
+  .header-hero-container {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(17, 19, 31, 0.15),
+        rgba(17, 19, 31, 0.75),
+        rgba(17, 19, 31, 0.98)
+      ),
+      url(/img/hero/hero-bg-desk-big@2x.jpg);
   }
 }
