--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">
-  <div class="container header-hero-container">
+  <div class="container">
     <h1 class="title-hero">
       Explore the High Seas with Our Luxury Yacht Rentals
     </h1>
