--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,13 +1,13 @@
 <section class="reviews">
   <div class="container container_reviews">
     <h2 class="reviews-title">
-      YachtJet take pride in providing the best possible service and experience
-      to our customers
+      YachtJet takes pride in providing the best possible service and experience
+      to our customers.
     </h2>
     <p class="reviews-subtitle">
       Our customers have enjoyed unforgettable moments on our yachts. Don't just
-      take our word for it - read on to find out what they have to say about
-      their journey with us.
+      take our word for it—read what they have to say about their journey with
+      us.
     </p>
     <ul class="reviews-list">
       <li class="reviews-item">
@@ -15,15 +15,15 @@
           <div class="reviews-item-image">
             <img
               srcset="/img/reviews/john.jpg 1x, /img/reviews/john@2x.jpg 2x"
-              src="/img/reviews/john.jpg  "
-              alt="john"
+              src="/img/reviews/john.jpg"
+              alt="Portrait of John Wax"
               width="56"
               height="56"
             />
           </div>
           <h3 class="reviews-item-name">John Wax</h3>
           <p class="reviews-item-subtitle">
-            I rented the Lagoon 620 with my family for a week-long vacation and
+            I rented the Lagoon 620 with my family for a week-long vacation, and
             it was the best decision ever. The yacht was spacious, comfortable,
             and luxurious, and the crew took care of everything.
           </p>
@@ -38,7 +38,7 @@
                 /img/reviews/victoria@2x.jpg 2x
               "
               src="/img/reviews/victoria.jpg"
-              alt="victoria"
+              alt="Portrait of Victoria Romashenko"
               width="56"
               height="56"
             />
@@ -57,7 +57,7 @@
             <img
               srcset="/img/reviews/ihor.jpg 1x, /img/reviews/ihor@2x.jpg 2x"
               src="/img/reviews/ihor.jpg"
-              alt="ihor"
+              alt="Portrait of Ihor Trachuk"
               width="56"
               height="56"
             />
