--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
   <div class="container container_reviews">
     <h2 class="reviews-title">
       YachtJet takes pride in providing the best possible service and experience
