--- a/src/css/about-us.css
+++ b/src/css/about-us.css
@@ -3,6 +3,7 @@
   padding: 0;
   min-height: 775px;
   margin-top: -59px;
+  margin-bottom: 80px;
 }
 
 .about-us-container {
@@ -62,6 +63,7 @@
   .about-us-section {
     min-height: 951px;
     margin-top: -67px;
+    margin-bottom: 150px;
   }
 
   .about-us-container {
