--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<section class="section about-us-section">
+<section class="section about-us-section" id="about">
   <div class="container about-us-container">
     <div class="about-us-description-container">
       <h2 class="about-us-title">
