--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,13 +4,13 @@
     <nav class="header-nav">
       <ul class="header-list">
         <li class="header-list-item">
-          <a class="header-list-link" href="#About">About</a>
+          <a class="header-list-link" href="#about">About</a>
         </li>
         <li class="header-list-item">
-          <a class="header-list-link" href="#Yachts">Yachts</a>
+          <a class="header-list-link" href="#yachts">Yachts</a>
         </li>
         <li class="header-list-item">
-          <a class="header-list-link" href="#Reviews">Reviews</a>
+          <a class="header-list-link" href="#reviews">Reviews</a>
         </li>
       </ul>
     </nav>
