--- a/src/partials/our-yachts.html
+++ b/src/partials/our-yachts.html
@@ -1,4 +1,4 @@
-<section class="our-yachts" id="Yachts">
+<section class="our-yachts" id="yachts">
   <div class="container">
     <h2 class="our-yachts-title">
       Choose your dream yacht and sail away into the sunset
