--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,4 +18,5 @@
 @import url('./advantages.css');
 @import url('./rent-a-yacht.css');
 @import url('./reviews.css');
+@import url('./mobile-menu.css');
 @import url('./footer.css');
