footer-buttons-fix

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,15 +4,16 @@
 
     <ul class="links-footer-list">
       <li class="links-fotr-item">
-        <button class="btn-footer" type="button">About</button>
+        <a class="btn-footer" href="#about">About</a>
       </li>
       <li class="links-fotr-item">
-        <button class="btn-footer" type="button">Yachts</button>
+        <a class="btn-footer" href="#yachts">Yachts</a>
       </li>
       <li class="links-fotr-item">
-        <button class="btn-footer" type="button">Reviews</button>
+        <a class="btn-footer" href="#reviews">Reviews</a>
       </li>
     </ul>
+
     <ul class="social-link-footer-list">
       <li class="social-link-item-footer">
         <a
