--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -27,7 +27,7 @@
 }
 
 .btn-footer {
-  font-family: inherit;
+  display: flex;
   font-weight: 400;
   font-size: 9px;
   line-height: 1.3;
@@ -37,8 +37,10 @@
   border-radius: 8px;
   width: 66px;
   height: 40px;
-  background-color: rgba(251, 251, 251, 0.3);
-  border: none;
+  background: rgba(251, 251, 251, 0.3);
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-footer:hover,
