--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,13 +4,13 @@
     <nav class="header-nav">
       <ul class="header-list">
         <li class="header-list-item">
-          <a class="header-list-link" href="#about">About</a>
+          <a class="header-list-link" href="#About">About</a>
         </li>
         <li class="header-list-item">
-          <a class="header-list-link" href="#yachts">Yachts</a>
+          <a class="header-list-link" href="#Yachts">Yachts</a>
         </li>
         <li class="header-list-item">
-          <a class="header-list-link" href="#reviews">Reviews</a>
+          <a class="header-list-link" href="#Reviews">Reviews</a>
         </li>
       </ul>
     </nav>
@@ -46,10 +46,72 @@
         </a>
       </li>
     </ul>
-    <a class="menu-link">
+    <button class="menu-btn" type="button">
       <svg class="menu-icon" width="28" height="28">
-        <use href="./img/icons/icons.svg#icon-menu" />
+        <use href="./img/icons/icons.svg#icon-menu"></use>
       </svg>
-    </a>
+    </button>
   </div>
 </section>
+
+<!-- mobilemenu -->
+
+<div class="mobile-menu">
+  <div class="container menu-container">
+    <a class="header-logo" href="./index.html">yachtjet</a>
+    <button class="close-btn" type="button">
+      <svg class="close-btn-icon" width="28" height="28">
+        <use href="./img/icons/icons.svg#icon-close"></use>
+      </svg>
+    </button>
+  </div>
+
+  <nav class="menu-nav">
+    <ul class="menu-list">
+      <li class="menu-list-item">
+        <a class="menu-list-link" href="#about">About</a>
+      </li>
+      <li class="menu-list-item">
+        <a class="menu-list-link" href="#yachts">Yachts</a>
+      </li>
+      <li class="menu-list-item">
+        <a class="menu-list-link" href="#reviews">Reviews</a>
+      </li>
+    </ul>
+  </nav>
+  <ul class="menu-list-socials">
+    <li class="menu-list-socials-item">
+      <a
+        class="menu-list-socials-link"
+        href="https://www.instagram.com/goitclub/"
+        target="_blank"
+      >
+        <svg class="menu-socials-icon" width="24" height="24">
+          <use href="./img/icons/icons.svg#icon-instagram"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="menu-list-socials-item">
+      <a
+        class="menu-list-socials-link"
+        href="https://www.youtube.com/c/GoIT"
+        target="_blank"
+      >
+        <svg class="menu-socials-icon" width="24" height="24">
+          <use href="./img/icons/icons.svg#icon-youtube"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="menu-list-socials-item">
+      <a
+        class="menu-list-socials-link"
+        href="https://www.facebook.com/goITclub/"
+        target="_blank"
+      >
+        <svg class="menu-socials-icon" width="24" height="24">
+          <use href="./img/icons/icons.svg#icon-facebook"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+</div>
