--- a/src/css/header.css
+++ b/src/css/header.css
@@ -154,7 +154,7 @@
   visibility: hidden;
   pointer-events: none;
   transform: translateX(100%);
-  transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
+  transition: transform 0.4s ease-in-out;
   display: flex;
   flex-direction: column;
   height: 100%;
