changed fc and hf

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -56,7 +56,7 @@
 
 <!-- mobilemenu -->
 
-<div class="mobile-menu">
+<div class="mobile-menu is-open">
   <div class="container menu-container">
     <a class="header-logo" href="./index.html">yachtjet</a>
     <button class="close-btn" type="button">
