--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,175 +1,168 @@
 .advantages {
-    padding-bottom: 80px;
+  padding-bottom: 80px;
 }
 
 .advantages-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px; 
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
 
-.advantages-title {}
-
 .advantages-info {
-    border-radius: 24px;
-    width: 100%;
-    background: #1b414b;
-    padding: 80px 20px;
+  border-radius: 24px;
+  width: 100%;
+  background: #1b414b;
+  padding: 80px 20px;
 }
 
 .advantages-list {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
 
 .advantages-list-item {
-    display: flex;
-    flex-direction: column;
-    gap: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 
-.advantages-list-item::before{
-    content: "";
-    font-weight: 500;
-    font-size: 28px;
-    line-height: 1;
-    letter-spacing: -0.05em;
-    color: #fbfbfb;
+.advantages-list-item::before {
+  content: '';
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 1;
+  letter-spacing: -0.05em;
+  color: #fbfbfb;
 }
 
-.advantages-list-item:nth-child(1)::before{
-    content: "01";
+.advantages-list-item:nth-child(1)::before {
+  content: '01';
 }
 
-.advantages-list-item:nth-child(2)::before{
-    content: "02";
+.advantages-list-item:nth-child(2)::before {
+  content: '02';
 }
 
-.advantages-list-item:nth-child(3)::before{
-    content: "03";
+.advantages-list-item:nth-child(3)::before {
+  content: '03';
 }
 
-.advantages-list-item:nth-child(4)::before{
-    content: "04";
+.advantages-list-item:nth-child(4)::before {
+  content: '04';
 }
 
 .advantages-list-item-text {
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: -0.02em;
-    color: #fbfbfb;
-    opacity: 0.8;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: -0.02em;
+  color: #fbfbfb;
+  opacity: 0.8;
 }
 
-.advantages-list-item-text::before{
-    content: "";
-    border-radius: 18px;
-    width: 100%;
-    height: 2px;
-    background-color: rgba(251, 251, 251, 0.1);
-    display: block;
-    margin-bottom: 18px;
+.advantages-list-item-text::before {
+  content: '';
+  border-radius: 18px;
+  width: 100%;
+  height: 2px;
+  background-color: rgba(251, 251, 251, 0.1);
+  display: block;
+  margin-bottom: 18px;
 }
 
 .advantages-img {
-    border-radius: 24px;
+  border-radius: 24px;
 }
 
-@media screen and (min-width: 375px){
+@media screen and (min-width: 375px) {
+  .advantages-container {
+    padding: 0;
+  }
 
-    .advantages-container {
-        padding: 0;
-    }
-
-    .advantages-info {
-        width: 335px;
-    }
+  .advantages-info {
+    width: 335px;
+  }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
+  .advantages {
+    padding-bottom: 150px;
+  }
 
-    .advantages{
-       padding-bottom: 150px;
-    }
+  .advantages-container {
+    gap: 32px;
+    padding: 0 32px;
+  }
 
-    .advantages-container {
-        gap: 32px;
-        padding: 0 32px; 
-    }
+  .advantages-info {
+    width: 704px;
+    padding: 90px 32px;
+  }
 
-    .advantages-info{
-        width: 704px;
-        padding: 90px 32px;
-    }
+  .advantages-list {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 44px;
+    column-gap: 32px;
+  }
 
-    .advantages-list {
-        flex-direction: row;
-        flex-wrap: wrap;
-        gap: 44px;
-        column-gap: 32px;
-    }
+  .advantages-list-item {
+    width: 304px;
+  }
 
-    .advantages-list-item {
-        width: 304px;
-    }
+  .advantages-list-item::before {
+    font-size: 32px;
+  }
 
-    .advantages-list-item::before {
-        font-size: 32px;
-    }
+  .advantages-list-item-text {
+    font-size: 13px;
+    line-height: 1.15;
+    width: 292px;
+  }
 
-    .advantages-list-item-text {
-        font-size: 13px;
-        line-height: 1.15;
-        width: 292px;
-    }
-
-    .advantages-img {
-        width: 704px;
-        height: 424px;
-    }
-    
+  .advantages-img {
+    width: 704px;
+    height: 424px;
+  }
 }
 
-@media screen and (min-width: 1280px){
+@media screen and (min-width: 1280px) {
+  .advantages-container {
+    padding: 0 50px;
+    flex-direction: row;
+  }
 
-    .advantages-container {
-        padding: 0 50px;
-        flex-direction: row;
-    }
+  .advantages-info {
+    width: 716px;
+    padding: 90px 50px;
+  }
 
-    .advantages-info {
-        width: 716px;
-        padding: 90px 50px;
-    }
+  .advantages-list-item {
+    width: 292px;
+  }
 
-    .advantages-list-item {
-        width: 292px;
-    }
-
-    .advantages-img {
-        width: 432px;
-        height: 424px;
-    }
+  .advantages-img {
+    width: 432px;
+    height: 424px;
+  }
 }
 
-@media screen and (min-width: 1440px){
-    
-    .advantages-info{
-        width: 768px;
-        padding: 90px 50px;
-    }
+@media screen and (min-width: 1440px) {
+  .advantages-info {
+    width: 768px;
+    padding: 90px 50px;
+  }
 
-    .advantages-list-item {
-        width: 318px;
-    }
+  .advantages-list-item {
+    width: 318px;
+  }
 
-    .advantages-img {
-        width: 540px;
-        height: 424px;
-    }
+  .advantages-img {
+    width: 540px;
+    height: 424px;
+  }
 }
