--- a/src/css/header.css
+++ b/src/css/header.css
@@ -145,17 +145,17 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #062730;
+  background-color: #0e1823;
   z-index: 9999;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
   transform: translateX(100%);
-  transition: transform 0.4s ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 0;
 }
 
 @media screen and (min-width: 768px) {
