--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -11,19 +11,20 @@
   font-size: 14px;
   letter-spacing: -0.03em;
   color: #fbfbfb;
-  position: relative;
-  top: 40px;
-  left: 30px;
+  padding: 40px 37px 0 30px;
+}
+
+.container-f {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .links-footer-list {
   display: flex;
   justify-content: center;
-  position: relative;
-  left: 30%;
-  top: 6%;
   gap: 4px;
   max-width: 206px;
+  padding-top: 40px;
 }
 
 .btn-footer {
@@ -52,9 +53,9 @@
 
 .social-link-footer-list {
   display: flex;
-  justify-content: center;
-  margin-top: 82px;
-  margin-bottom: 42px;
+  margin: 0 auto;
+  padding-top: 82px;
+  padding-bottom: 42px;
   gap: 8px;
 }
 
@@ -80,13 +81,10 @@
 }
 
 .footer-text-div {
-  display: flex;
   gap: 20px;
-  margin-top: 82px;
-  position: relative;
-  left: 44px;
-  white-space: nowrap;
-  max-width: 248px;
+  display: flex;
+  padding-left: 52px;
+  padding-top: 82px;
 }
 
 .footer-text {
@@ -95,7 +93,6 @@
   font-size: 12px;
   line-height: 1.7;
   letter-spacing: 0.03em;
-  text-align: center;
   color: rgba(251, 251, 251, 0.4);
 }
 
@@ -108,9 +105,7 @@
   .logo-footer {
     font-size: 20px;
     color: #fbfbfb;
-    position: relative;
-    top: 50px;
-    left: 48px;
+    padding: 50px 110px 0 48px;
   }
 
   .btn-footer {
@@ -119,19 +114,21 @@
 
   .links-footer-list {
     max-width: 281px;
+    padding-top: 50px;
   }
 
   .footer-descr {
     margin-top: 96px;
     font-size: 32px;
     max-width: 640px;
+    margin-bottom: 120px;
   }
 
   .footer-text-div {
-    margin-top: 100px;
-    max-width: 298px;
     gap: 32px;
-    left: 220px;
+    white-space: nowrap;
+    max-width: 298px;
+    padding: 0 219px 0 219px;
   }
 
   .footer-text {
@@ -140,11 +137,11 @@
   }
 
   .social-link-footer-list {
-    margin: 0;
-    position: relative;
-    left: 600px;
-    bottom: 15px;
     max-width: 88px;
+    padding-top: 50px;
+    padding-bottom: 0;
+    padding-left: 25px;
+    gap: 8px;
   }
 }
 
@@ -153,20 +150,20 @@
     max-width: 1230px;
   }
 
-  .social-link-footer-list {
-    left: 1060px;
-    bottom: 16px;
+  .logo-footer {
+    font-size: 20px;
+    color: #fbfbfb;
+    padding: 50px 326px 0 75px;
   }
 
-  .links-footer-list {
-    left: 475px;
+  .social-link-footer-list {
+    padding-left: 150px;
   }
 
   .footer-text-div {
     gap: 32px;
-    margin-top: 100px;
-    left: 466px;
     max-width: 298px;
+    padding: 0 466px 0 466px;
   }
 
   .footer-descr {
@@ -179,9 +176,14 @@
     max-width: 1390px;
   }
 
+  .logo-footer {
+    font-size: 20px;
+    color: #fbfbfb;
+    padding: 50px 410px 0 75px;
+  }
+
   .social-link-footer-list {
-    left: 1220px;
-    bottom: 16px;
+    padding-left: 220px;
   }
 
   .links-footer-list {
@@ -190,8 +192,7 @@
 
   .footer-text-div {
     gap: 32px;
-    margin-top: 100px;
-    left: 546px;
+    padding: 0 546px 0 546px;
     max-width: 298px;
   }
 
