--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,54 +1,55 @@
 <footer class="footer">
   <div class="container footer-container">
-    <a href="/src/index.html" class="logo-footer">yachtjet</a>
+    <div class="container-f">
+      <a href="/src/index.html" class="logo-footer">yachtjet</a>
 
-    <ul class="links-footer-list">
-      <li class="links-fotr-item">
-        <a class="btn-footer" href="#about">About</a>
-      </li>
-      <li class="links-fotr-item">
-        <a class="btn-footer" href="#yachts">Yachts</a>
-      </li>
-      <li class="links-fotr-item">
-        <a class="btn-footer" href="#reviews">Reviews</a>
-      </li>
-    </ul>
-
-    <ul class="social-link-footer-list">
-      <li class="social-link-item-footer">
-        <a
-          href="https://www.instagram.com/goitclub/"
-          class="link-icon-footer"
-          target="_blank"
-        >
-          <svg class="icon-footer" width="24" height="24">
-            <use href="./img/icons/icons.svg#icon-instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-link-item-footer">
-        <a
-          href="https://www.youtube.com/c/GoIT"
-          class="link-icon-footer"
-          target="_blank"
-        >
-          <svg class="icon-footer" width="24" height="24">
-            <use href="./img/icons/icons.svg#icon-youtube"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-link-item-footer">
-        <a
-          href="https://www.facebook.com/goITclub/"
-          class="link-icon-footer"
-          target="_blank"
-        >
-          <svg class="icon-footer" width="24" height="24">
-            <use href="./img/icons/icons.svg#icon-facebook"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
+      <ul class="links-footer-list">
+        <li class="links-fotr-item">
+          <a class="btn-footer" href="#about">About</a>
+        </li>
+        <li class="links-fotr-item">
+          <a class="btn-footer" href="#yachts">Yachts</a>
+        </li>
+        <li class="links-fotr-item">
+          <a class="btn-footer" href="#reviews">Reviews</a>
+        </li>
+      </ul>
+      <ul class="social-link-footer-list">
+        <li class="social-link-item-footer">
+          <a
+            href="https://www.instagram.com/goitclub/"
+            class="link-icon-footer"
+            target="_blank"
+          >
+            <svg class="icon-footer" width="24" height="24">
+              <use href="./img/icons/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-link-item-footer">
+          <a
+            href="https://www.youtube.com/c/GoIT"
+            class="link-icon-footer"
+            target="_blank"
+          >
+            <svg class="icon-footer" width="24" height="24">
+              <use href="./img/icons/icons.svg#icon-youtube"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-link-item-footer">
+          <a
+            href="https://www.facebook.com/goITclub/"
+            class="link-icon-footer"
+            target="_blank"
+          >
+            <svg class="icon-footer" width="24" height="24">
+              <use href="./img/icons/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
     <p class="footer-descr">
       No matter which yacht you choose, our experienced crew will ensure that
       your journey is smooth and enjoyable.
