footer-css-change

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,20 +3,20 @@
   max-width: 355px;
   height: 412px;
   background-color: #1b414b;
+  padding: 40px 30px 10px;
 }
 
 .logo-footer {
-  font-family: 'Inter', sans-serif;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.03em;
   color: #fbfbfb;
-  padding: 40px 37px 0 30px;
 }
 
 .container-f {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .links-footer-list {
@@ -24,13 +24,11 @@
   justify-content: center;
   gap: 4px;
   max-width: 206px;
-  padding-top: 40px;
 }
 
 .btn-footer {
   font-family: inherit;
   display: flex;
-  font-weight: 400;
   font-size: 9px;
   line-height: 1.3;
   text-transform: uppercase;
@@ -83,13 +81,12 @@
 .footer-text-div {
   gap: 20px;
   display: flex;
-  padding-left: 52px;
   padding-top: 82px;
+  white-space: nowrap;
+  justify-content: center;
 }
 
 .footer-text {
-  font-family: 'Inter', sans-serif;
-  font-weight: 400;
   font-size: 12px;
   line-height: 1.7;
   letter-spacing: 0.03em;
@@ -100,12 +97,17 @@
   .footer-container {
     max-width: 736px;
     height: 418px;
+    padding: 50px 48px 20px;
+  }
+
+  .social-link-footer-list {
+    margin: 0;
+    padding: 0;
   }
 
   .logo-footer {
     font-size: 20px;
     color: #fbfbfb;
-    padding: 50px 110px 0 48px;
   }
 
   .btn-footer {
@@ -114,7 +116,12 @@
 
   .links-footer-list {
     max-width: 281px;
-    padding-top: 50px;
+  }
+
+  .footer-text-div {
+    gap: 32px;
+    padding-top: 0;
+    margin: 0 auto;
   }
 
   .footer-descr {
@@ -128,9 +135,7 @@
     gap: 32px;
     white-space: nowrap;
     max-width: 298px;
-    padding: 0 219px 0 219px;
   }
-
   .footer-text {
     font-size: 14px;
     line-height: 1.18;
@@ -138,9 +143,6 @@
 
   .social-link-footer-list {
     max-width: 88px;
-    padding-top: 50px;
-    padding-bottom: 0;
-    padding-left: 25px;
     gap: 8px;
   }
 }
@@ -148,22 +150,17 @@
 @media screen and (min-width: 1280px) {
   .footer-container {
     max-width: 1230px;
+    padding: 50px 75px 20px;
   }
 
   .logo-footer {
     font-size: 20px;
     color: #fbfbfb;
-    padding: 50px 326px 0 75px;
-  }
-
-  .social-link-footer-list {
-    padding-left: 150px;
   }
 
   .footer-text-div {
     gap: 32px;
     max-width: 298px;
-    padding: 0 466px 0 466px;
   }
 
   .footer-descr {
@@ -174,25 +171,16 @@
 @media screen and (min-width: 1440px) {
   .footer-container {
     max-width: 1390px;
+    padding: 50px 75px 20px;
   }
 
   .logo-footer {
     font-size: 20px;
     color: #fbfbfb;
-    padding: 50px 410px 0 75px;
-  }
-
-  .social-link-footer-list {
-    padding-left: 220px;
-  }
-
-  .links-footer-list {
-    left: 558px;
   }
 
   .footer-text-div {
     gap: 32px;
-    padding: 0 546px 0 546px;
     max-width: 298px;
   }
 
