--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -6,6 +6,13 @@
   padding: 40px 30px 20px;
 }
 
+.footer-uper-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 37px;
+}
+
 .logo-footer {
   font-weight: 500;
   font-size: 14px;
@@ -16,7 +23,19 @@
 .container-f {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+@media screen and (min-width: 375px) {
+  .footer-uper-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .container-f {
+    justify-content: space-between;
+  }
 }
 
 .links-footer-list {
@@ -100,6 +119,10 @@
     padding: 50px 48px 20px;
   }
 
+  .footer-uper-container {
+    gap: 110px;
+  }
+
   .social-link-footer-list {
     margin: 0;
     padding: 0;
@@ -136,6 +159,7 @@
     white-space: nowrap;
     max-width: 298px;
   }
+
   .footer-text {
     font-size: 14px;
     line-height: 1.18;
@@ -151,6 +175,10 @@
   .footer-container {
     max-width: 1230px;
     padding: 50px 75px 20px;
+  }
+
+  .footer-uper-container {
+    gap: 330px;
   }
 
   .logo-footer {
@@ -172,6 +200,10 @@
   .footer-container {
     max-width: 1390px;
     padding: 50px 75px 20px;
+  }
+
+  .footer-uper-container {
+    gap: 409px;
   }
 
   .logo-footer {
