--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container footer-container">
     <div class="container-f">
-      <div class="footer-uper-container">
+      <div class="footer-upper-container">
         <a href="/src/index.html" class="logo-footer">yachtjet</a>
         <ul class="links-footer-list">
           <li class="links-fotr-item">
