fix bug with the help of advice oleksandr honshar

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,9 +4,6 @@
   height: 412px;
   background-color: #1b414b;
   padding: 40px 30px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 
 }
 
@@ -28,7 +25,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 206px;
+  flex-direction: column;
+
 }
 
 @media screen and (min-width: 375px) {
@@ -40,7 +38,7 @@
 
   .container-f {
     justify-content: space-between;
-    width: unset;
+
   }
 }
 
@@ -125,10 +123,6 @@
     padding: 50px 48px 20px;
   }
 
-  .container-f {
-    flex-wrap: nowrap;
-  }
-
   .footer-upper-container {
     gap: 110px;
   }
@@ -136,6 +130,10 @@
   .social-link-footer-list {
     margin: 0;
     padding: 0;
+  }
+
+  .container-f {
+    flex-direction: row;
   }
 
   .logo-footer {
@@ -149,7 +147,6 @@
 
   .links-footer-list {
     max-width: 281px;
-    margin-right: 90px;
   }
 
   .footer-text-div {
@@ -197,10 +194,6 @@
     color: #fbfbfb;
   }
 
-  .links-footer-list {
-    margin-right: 311px;
-  }
-
   .footer-text-div {
     gap: 32px;
     max-width: 298px;
@@ -226,9 +219,7 @@
     color: #fbfbfb;
   }
 
-  .links-footer-list {
-    margin-right: 338px;
-  }
+
 
   .footer-text-div {
     gap: 32px;
