--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -59,8 +59,8 @@
 .reviews-card {
   background-color: #fbfbfb;
   border-radius: 24px;
-
-  /* Change after review */
+  max-width: 335px;
+  margin: 0 auto;
   padding: 32px 8px;
   display: flex;
   flex-direction: column;
